--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@
 
 .classpath
 .project
+
+#ignore properties file
 application-properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
