--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@
 .project
 
 #ignore properties file
-application_properties
+application.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
