--- a/.classpath
+++ b/.classpath
@@ -25,5 +25,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/hojin/Downloads/simplecaptcha-1.2.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
