--- a/.classpath
+++ b/.classpath
@@ -26,13 +26,8 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
-		<attributes>
-			<attribute name="owner.project.facets" value="jst.web"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/simplecaptcha-1.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/owner/OneDrive/문서/카카오톡 받은 파일/simplecaptcha-1.2.1/simplecaptcha-1.2.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
