--- a/src/main/resources/db/props/application.properties
+++ b/src/main/resources/db/props/application.properties
@@ -1,9 +1,9 @@
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:50001/covid?characterEncoding=UTF-8&rewriteBatchedStatements=true&serverTimezone=Asia/Seoul
-jdbc.username=username
-jdbc.password=password
+jdbc.url=jdbc:mysql://localhost:52000/covid?characterEncoding=UTF-8&rewriteBatchedStatements=true&serverTimezone=Asia/Seoul
+jdbc.username=root
+jdbc.password=1234
 
-flyway.resourcepath=you're migrate file path
+flyway.resourcepath=classpath:db/migrate
 
 api.covidGubunKey=yout api key
 api.covidHospitalKey=your api key
