fixed untracked files

--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ local.properties
 .buildpath
 
 # sbteclipse plugin
-.target
+/target/
 
 # Tern plugin
 .tern-project
@@ -96,9 +96,14 @@ hs_err_pid*
 # End of https://www.toptal.com/developers/gitignore/api/java,eclipse
 
 #ignore properties file
-application.properties
+/src/main/resources/db/props/application.properties
 
 #sass file
-app.css
-app.css.map
+/src/main/webapp/resources/css/app.css
+/src/main/webapp/resources/css/app.css.map
 
+#EclipseCore
+.project
+
+#JDT-specific(Eclipse Java Development tools)
+.classpath
