--- a/pom.xml
+++ b/pom.xml
@@ -225,6 +225,19 @@
 			<artifactId>flyway-core</artifactId>
 			<version>7.8.1</version>
 		</dependency>
+		
+		<!-- redis -->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+			<version>1.5.0.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.8.0</version>
+		</dependency>
 
 
 		<!-- AspectJ -->
